# templing

./: Cargo.toml  LICENSE
src/: lib.rs
tests/: example.rs  for.templing  included.templing
